--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ hs_err_pid*
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/**/**.xml
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
