--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,10 @@
             <artifactId>mp3agic</artifactId>
             <version>${mp3agic.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.felixgail</groupId>
+            <artifactId>gplaymusic</artifactId>
+            <version>0.3.1</version>
+        </dependency>
     </dependencies>
 </project>
