--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+.idea/dataSources/86ef2c13-e643-45e6-ae24-47823f2cdd44.xml
+.idea/misc.xml
+.idea/workspace.xml
+GPMDPj.iml
